package evm.cooker.models;

public interface Edible {
    float getCalories();
}
